Bug 399230 - KMyMoney uses incorrect path to detect presence of GPG secret keyring on Windows
Summary: KMyMoney uses incorrect path to detect presence of GPG secret keyring on Windows
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: packaging (other bugs)
Version First Reported In: git (master)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 435948 (view as bug list)
Depends on:
Blocks: 426400
  Show dependency treegraph
 
Reported: 2018-09-30 02:18 UTC by Andrew Ho
Modified: 2021-06-30 06:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments
GpgME not installed correctly error (76.90 KB, application/pdf)
2020-12-01 05:56 UTC, Nigel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Ho 2018-09-30 02:18:37 UTC
SUMMARY

I install gpg4win in Windows and I make a new gpg key. The "Use GPG encrytion" is grey out in the XML Storage plugin.

The path of the user home directory in Linux is ~/.gnupg, and it is not working in Windows.

Please add an option for Windows, homedir = "%HOMEDRIVE%%HOMEPATH%\.gnupg".

The user homedir of gpg4win actually is %HOMEDRIVE%%HOMEPATH%\AppData\Roaming\gnupg".

If the Windows options have these two choices, that will be great.

Thanks,

Andrew
Comment 1 Thomas Baumgart 2018-09-30 13:56:10 UTC
Git commit 96045daafb56188b72e8930ae17ff6c3f60ff245 by Thomas Baumgart.
Committed on 30/09/2018 at 13:56.
Pushed by tbaumgart into branch '5.0'.

Scan for gnupg home dir location

Scan for the secret keyring file by traversing the home directory and
the application data directories known to QStandardPaths and some know
subdirectory combinations.

M  +51   -0    kmymoney/plugins/xml/libkgpgfile/kgpgfile.cpp

https://commits.kde.org/kmymoney/96045daafb56188b72e8930ae17ff6c3f60ff245
Comment 2 Andrew Ho 2018-10-22 17:04:15 UTC
I test on Version 5.0.80-90212a2b

GPG encryption of XML Storage is not working in Windows even after the patch from Thomas. The libraries of kf5-gpgmepp and gpgmepp are missing.

These are what I notice so far, I will dig into it.

Thanks,

Andrew
Comment 3 Nigel 2020-12-01 05:56:39 UTC
Created attachment 133765 [details]
GpgME not installed correctly error

Hi,

Please see attached screenshot of the error I get. I am using Gpg4Win 3.14.

Any help much appreciated.

Best regards,

Nigel
Comment 4 Ralf Habacker 2021-04-24 14:26:22 UTC
(In reply to Andrew Ho from comment #0)
> The user homedir of gpg4win actually is
> %HOMEDRIVE%%HOMEPATH%\AppData\Roaming\gnupg".

See https://invent.kde.org/office/kmymoney/-/merge_requests/78 for a related merge request.
Comment 5 Thomas Baumgart 2021-04-28 08:09:29 UTC
Git commit 2cc89fc6c77c4f42e11c92f5ca0ddccd5c2a15ae by Thomas Baumgart.
Committed on 28/04/2021 at 08:08.
Pushed by tbaumgart into branch '5.1'.

Change order to search for GPG configuration directory
FIXED-IN: 5.1.2

(cherry picked from commit 26b13d33fe7859dcaaf93a1139d3768336c7aa36)

M  +88   -58   kmymoney/plugins/xml/libkgpgfile/kgpgfile.cpp

https://invent.kde.org/office/kmymoney/commit/2cc89fc6c77c4f42e11c92f5ca0ddccd5c2a15ae
Comment 6 Thomas Baumgart 2021-06-30 06:30:34 UTC
*** Bug 435948 has been marked as a duplicate of this bug. ***