Change order to search for GPG configuration directory

BUG: 399230
FIXED-IN: 5.1.2

(cherry picked from commit 26b13d33fe7859dcaaf93a1139d3768336c7aa36)